--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>contact</artifactId>
   <packaging>war</packaging>
   <name>contact</name>
-  <description>webapp.</description>
+  <description>contact.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
