--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>project16</artifactId>
   <packaging>war</packaging>
   <name>project16</name>
-  <description>project16.</description>
+  <description>webapp.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
