--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,10 +10,10 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>contact</artifactId>
+  <artifactId>contactus/artifactId>
   <packaging>war</packaging>
-  <name>webapp</name>
-  <description>contact.</description>
+  <name>contactus</name>
+  <description>contactus.</description>
 
   <build>
     <finalName>${project.artifactId}</finalName>
