--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>contactus/artifactId>
+  <artifactId>contactus</artifactId>
   <packaging>war</packaging>
   <name>contactus</name>
   <description>contactus.</description>
