--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,7 +12,7 @@
 
   <artifactId>contact</artifactId>
   <packaging>war</packaging>
-  <name>webapp</name>
+  <name>contact</name>
   <description>contact.</description>
 
   <build>
